styled map, updated faq copy and made titles title case, added favicons

--- a/password-protected.html
+++ b/password-protected.html
@@ -48,7 +48,7 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div>
                     <iframe
                             width="600"
                             height="450"
@@ -57,13 +57,16 @@
                             allowfullscreen>
                     </iframe>
                 </div>
-                <div class="col-md-4">
-                    <h2>Ben & Cola are Getting Married!</h2>
-                    <p>Ceremony at 5:30pm</p>
-                    <p>September 23, 2018</p>
-                    <p>The Boathouse at Prospect Park</p>
-                    <p>Reception to Follow</p>
-                    <p>101 East Dr, Brooklyn, NY 11225 </p>
+                <div class="map-text">
+                    <div>
+                        <h2>Ben & Cola are Getting Married!</h2>
+                        <p>Ceremony at 5:30pm</p>
+                        <p>September 23, 2018</p>
+                        <p>The Boathouse at Prospect Park</p>
+                        <p>Reception to Follow</p>
+                        <p><a href="https://www.google.com/maps/place/Prospect+Park+Boathouse+%2B+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
+                        <p>Limited Parking Available Nearby</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -114,7 +117,7 @@
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
                             <img src="images/tie.png" alt="">
                         </div>
-                        <h2>What should I wear?</h2>
+                        <h2>What Should I Wear?</h2>
                         <p>Cocktail Attire is Prefered</p>
                         <p>Skip the tux, cocktail attire calls for a dark suit with a tie, a dress, or dressy separates that are party-ready. Have some fun with jewelry—or, if you'd rather wear color, opt for something bright!</p>
                     </div>
@@ -138,11 +141,11 @@
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
                             <img src="images/luggage.png" alt="">
                         </div>
-                        <h2>Where should I stay?</h2>
-                        <p>We’ve held blocks of rooms for a discounted rate at the following hotels. These rooms will be available to reserve until July 23, 2018 - or until they are all booked - so reserve now, just mention that you are part of the Solwitz wedding!</p>
-                        <p>The Fairfield Inn, Brooklyn</p>
-                        <p>The Nu Hotel</p>
-                        <p>The Marriott at Brooklyn Bridge</p>
+                        <h2>Where Should I Stay?</h2>
+                        <p>We’ve held blocks of rooms for a discounted rate at three hotels. The Farfield and Nu Hotels include breakfast and discounted parking is available. These rooms will be available to reserve until July 21, 2018 - or until they are all booked, so reserve now: just mention that you are part of the Hodges/Solwitz wedding!</p>
+                        <p><a href="http://cwp.marriott.com/nycbf/shw">The Fairfield Inn, Brooklyn</a></p>
+                        <p><a href="https://nuhotelbrooklyn.reztrip.com/ext/promoRate?property=417&mode=b&pm=true&sr=287631&vr=3">The Nu Hotel</a></p>
+                        <p><a href="https://aws.passkey.com/go/HodgesWeddingRoomBlock">The Marriott at Brooklyn Bridge</a></p>
                     </div>
                 </div>
 
@@ -152,10 +155,8 @@
                             <img src="images/gifts.png" alt="">
                         </div>
                         <h2>What About Gifts?</h2>
-                        <p>What we want most for our wedding is to have all of our amazing friends and family in the same room, so, more than anything we consider your presence to be our gift. If you would like to get us something tangible, here are some suggestions:</p>
-                        <p>Please consider contributing to the gift of an Overstory Tree, Prospect Park's restoration in honor of our marriage.</p>
-                        <p>We love original art</p>
-                        <p>Like matching silverware? So do we: Our Registry is here</p>
+                        <p>Most of all we want all of our amazing friends and family in the same room, so, more than anything we consider your presence to be our gift. However, If you would like to give something tangible, we love original art. Please consider contributing to the gift of an <a href="https://www.zola.com/registry/collection-item/5a3d5d86e343564ff799339b">Overstory Tree</a>, for Prospect Park’s restoration in honor of our marriage.</p>
+                        <p>Like matching silverware? So do we: <a href="https://www.zola.com/registry/benandcola">Our Registry is Here</a></p>
                     </div>
                 </div>
 
@@ -187,8 +188,8 @@
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
                             <img src="images/hash.png" alt="">
                         </div>
-                        <h2>What’s the hashtag?!</h2>
-                        <p>#BenAndColaSoLit</p>
+                        <h2>What’s the Hashtag?!</h2>
+                        <p><a href="https://www.instagram.com/explore/tags/benandcolasolit/">#BenAndColaSoLit</a></p>
                     </div>
                 </div>
 
@@ -197,9 +198,8 @@
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="300ms">
                             <img src="images/questions.png" alt="">
                         </div>
-                        <h2>What if I have questions?</h2>
-                        <p>Carolyn and John Hodges can help you with most questions you may have.</p>
-                        <p>Reach them at SolwitzWedding@gmail.com</p>
+                        <h2>What If I Have Questions?</h2>
+                        <p>Send an email to <a href="mailto:benandcola@gmail.com">BenandCola@gmail.com</a> with any questions you may have and we’ll get back to you as soon as possible.</p>
                     </div>
                 </div>
             </div>
