--- a/password-protected.html
+++ b/password-protected.html
@@ -235,7 +235,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/1.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Carolyn.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -248,7 +248,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/2.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/John.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -261,7 +261,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/3.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Lissa.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -274,7 +274,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/1.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Richard.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -290,7 +290,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/4.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Pooja.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -303,7 +303,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/3.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Salome.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -316,7 +316,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/2.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Becky.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -329,7 +329,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/1.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Casey.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -345,7 +345,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/4.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Tom.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -358,7 +358,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/3.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Seth.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -371,7 +371,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/2.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Steve.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
