moved inside to separate page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="images/adventures-of-ben-and-cola.png" class="img-responsive center-block">
                 </div>
                 <div class="timeline-date text-center">
-                    <a href="" class="btn btn-common uppercase">Continue to Site</a>
+                    <a href="inside.html" class="btn btn-common uppercase">Continue to Site</a>
                 </div>
                 <div class="timeline-divider overflow padding-bottom"></div>
             </div>
@@ -285,7 +285,7 @@
                     <div class="timeline-divider overflow padding-bottom"></div>
 
                     <div class="timeline-date text-center">
-                        <a href="" class="btn btn-common uppercase">Continue to Site</a>
+                        <a href="inside.html" class="btn btn-common uppercase">Continue to Site</a>
                     </div>
                 </div>
             </div>
@@ -293,31 +293,10 @@
     </section>
     <!--/#blog-->
 
-    <section id="private">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div id="passwordForm">
-                        <form onsubmit="return false;">
-                            <label>Password:</label>
-                            <input type="password" id="password" type="text">
-                            <button id="formBtn">Submit</button>
-                        </form>
-                    </div>
-
-                    <div id="display" ></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--/#private-->
-
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/crypt.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
 </body>
 </html>
