--- a/password-protected.html
+++ b/password-protected.html
@@ -143,7 +143,7 @@
                         </div>
                         <h2>Where Should I Stay?</h2>
                         <p>We’ve held blocks of rooms for a discounted rate at three hotels. The Farfield and Nu Hotels include breakfast and discounted parking is available. These rooms will be available to reserve until July 21, 2018 - or until they are all booked, so reserve now: just mention that you are part of the Hodges/Solwitz wedding!</p>
-                        <p><a href="http://cwp.marriott.com/nycbf/shw">The Fairfield Inn, Brooklyn</a></p>
+                        <p><a href="http://cwp.marriott.com/nycbf/shw">The Fairfield Inn Brooklyn</a></p>
                         <p><a href="https://nuhotelbrooklyn.reztrip.com/ext/promoRate?property=417&mode=b&pm=true&sr=287631&vr=3">The Nu Hotel</a></p>
                         <p><a href="https://aws.passkey.com/go/HodgesWeddingRoomBlock">The Marriott at Brooklyn Bridge</a></p>
                     </div>
@@ -156,7 +156,8 @@
                         </div>
                         <h2>What About Gifts?</h2>
                         <p>Most of all we want all of our amazing friends and family in the same room, so, more than anything we consider your presence to be our gift. However, If you would like to give something tangible, we love original art. Please consider contributing to the gift of an <a href="https://www.zola.com/registry/collection-item/5a3d5d86e343564ff799339b">Overstory Tree</a>, for Prospect Park’s restoration in honor of our marriage.</p>
-                        <p>Like matching silverware? So do we: <a href="https://www.zola.com/registry/benandcola">Our Registry is Here</a></p>
+                        <p>Like matching silverware? So do we:</p>
+                        <p><a href="https://www.zola.com/registry/benandcola">Our Registry is Here</a></p>
                     </div>
                 </div>
 
@@ -166,7 +167,8 @@
                             <img src="images/teddy.png" alt="">
                         </div>
                         <h2>Will You Have Child Care?</h2>
-                        <p>We will be providing childcare at (HOTEL) by (Person) for children under 10 during the ceremony and reception (4:00pm - 11:30pm).</p>
+                        <p>We will be providing childcare at (HOTEL) by (Person) for children under 10 during the ceremony and reception.</p>
+                        <p>(4:00pm - 11:30pm)</p>
                         <p>Please do bring your children to the rehearsal dinner - Berg’n is very family friendly and we really want to see them!</p>
                     </div>
                 </div>
