--- a/password-protected.html
+++ b/password-protected.html
@@ -75,16 +75,19 @@
 
     <section id="features">
         <div class="container">
-            <div class="row transbox-over">
-                <img src="images/join_us.jpg" class="img-responsive">
-                <div>
-                    <div class="text-center">
-                        <h2>JOIN US!</h2>
-                        <p>Please fill out our online<br> RSVP, we can't wait<br> to celebrate with you!</p>
-                        <a href="#" class="btn btn-common">RSVP</a>
-                    </div>
-                </div>
-            </div>
+            <!--<div class="row transbox-over">-->
+                <!--<img src="images/join_us.jpg" class="img-responsive">-->
+                <!--<div>-->
+                    <!--<div class="text-center">-->
+                        <!--<h2>JOIN US!</h2>-->
+                        <!--<p>Please fill out our online<br> RSVP, we can't wait<br> to celebrate with you!</p>-->
+                        <!--<a href="#" class="btn btn-common">RSVP</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <script type="text/javascript" src="http://app.rsvpify.com/embed/500065827"></script>
+            <script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
+            <script type="text/javascript">iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
         </div>
     </section>
      <!--/#features-->
