addded photos for brian, tommy, wendy, and donna

--- a/password-protected.html
+++ b/password-protected.html
@@ -405,7 +405,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/4.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Wendy.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -418,7 +418,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/3.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Brian.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -431,7 +431,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/2.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Tommy.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
@@ -444,7 +444,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/1.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Donna.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
