Allison's copy edits

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </div>
                             <div class="col-sm-4">
                                 <h1>December 2014 </h1>
-                                <p>Fate and a lot of snow brought Ben and Cola together. They met each other on a snowboarding meetup trip in Killington, VT. They were assigned the same cabin, where these two strangers found out they were actually neighbors back in Brooklyn. </p>
+                                <p>Fate and a lot of snow first brought Ben and Cola together. Assigned to the same cabin for a snowboarding meetup, these strangers discovered that they were Brooklyn neighbors.</p>
                             </div>
                     </div>
 
@@ -60,7 +60,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        3 days later, Cola asked Ben out to dinner. He took her out for Falafel. They bond over their similar love of music, and the shared yearning to someday see Bonobo live in concert.
+                                        Home again, Cola asked Ben out to dinner. They discovered similar tastes in music, and shared a yearning to someday see Bonobo live in concert.
                                     </div>
                                 </div>
                             </div>
@@ -91,7 +91,7 @@
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">April 2015</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">Ben asked Cola to move into his place, she was already spending most of her time there anyways! They spent an afternoon moving her stuff in from across the street.</span>
+                                        <span class="post-date pull-left">A big step: Ben asked Cola to move into his place. They spent an afternoon moving her stuff in from across the street.</span>
                                     </div>
                                 </div>
                             </div>
@@ -101,7 +101,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">Ben’s Mom and brother Tom visit Brooklyn and they spend all afternoon walking through Brooklyn Botanic Garden.</span>
+                                        <span class="post-date pull-left">Ben’s Mom and brother Tom visit, and Ben and Cola share the Brooklyn Botanic Garden with them.</span>
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">November 2015</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">They take their first true vacation together – a two and a half week trip to visit Cola's sister Pooja in Hong Kong, and tour Japan with Ben's friends.</span>
+                                        <span class="post-date pull-left">They take their first true vacation together – a two and a half week adventure to visit Cola's sister Pooja in Hong Kong, then on to tour Japan with Ben's friends.</span>
                                     </div>
                                 </div>
                             </div>
@@ -122,7 +122,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        They visit Ben’s friends Steve and Amy on the weekends to hang out, but end up spending most of the time flying quadcopters in the back yard with their kids.
+                                        On weekends they plan to hang out with friends Steve and Amy, but instead end up in the back yard with their kids, flying quadcopters.
                                     </div>
                                 </div>
                             </div>
@@ -132,7 +132,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        Ben goes to Cola's parent's house in Boston for Christmas, he meets her sister Salome for the first time.
+                                        Ben joins Cola's family in Boston for Christmas, and meets Cola's sister Salome for the first time.
                                     </div>
                                 </div>
                             </div>
@@ -142,7 +142,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        They move into a bigger apartment, literally right next door, and they painted the walls bright colors to make it feel more like a home.
+                                        They move into a bigger apartment, literally right next door, and paint the walls bright colors to make it feel like their home.
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                         </div>
                         <div class="col-sm-4">
                             <h1>December 2016 </h1>
-                            <p>They had always dreamed of getting a dog together, and planned to adopt that spring. But fate stepped in once again, and a friend they had dog-sat for in the past, called saying they just couldn’t take care of their puppy anymore and were looking for a good home for her.  Ben & Cola already loved this puppy, so a few weeks later, added the newest addition to their adventuring family. They named her Chihiro after one of their favorite movie characters.</p>
+                            <p>A friend they had dog-sat for called saying they just couldn’t take care of their puppy anymore. Ben & Cola already loved this puppy and happily added Chihiro to their adventuring family.</p>
                         </div>
                     </div>
 
@@ -164,7 +164,9 @@
                         <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    They’ve now made the trip on which they met into an annual tradition! Each winter they go snowboarding together almost every weekend. Even with a new puppy, they always make time for annual trips to BC, Canada to ride Whistler Blackcomb.
+                                    <div class="post-bottom overflow">
+                                        They’ve made that snowboarding meetup to Killington into an annual tradition! They fit in snowboarding trips most every winter weekend, as well as an annual trip to BC, Canada to ride Whistler Blackcomb.
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -183,7 +185,7 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        To keep up the music streak, they visit Ben’s friends Paul and Krystle in DC to go to several concerts and festivals. Chihiro’s first time in our country’s capital!
+                                        On a music streak, they visit Ben’s friends Paul and Krystle in DC to go to several concerts and festivals.
                                     </div>
                                 </div>
                             </div>
@@ -200,17 +202,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        Cola’s friend Becky invites them to Boston to make an *amazing* brunch. Chihiro doesn’t even look at the plate of bacon placed right in front of her!
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -220,22 +212,32 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6 padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        On the weekends that they don’t go to Lake George, Chihiro takes them to Prospect Park in Brooklyn, where she can run free with literally hundreds of other dogs.
+                                        On the weekends that they don’t go to Lake George, Chihiro takes them to Prospect Park in Brooklyn, where she can run free with hundreds of other dogs.
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h2 class="post-title bold">August 2017</h2>
                                     <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">While swimming in Lake George, they relax on a floating dock and Ben proposes to Cola and makes it official – they had been talking about it long enough! (I think it’s cute and funny to have the two “long enough” statements after each other, personally, but I’d also understand it you wanna leave it out)</span>
+                                        <span class="post-date pull-left">Relaxing on a floating dock after a swim in Lake George, Ben surprises Cola by proposing. They had been talking about it long enough!</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                            <div class="single-blog timeline">
+                                <div class="post-content overflow">
+                                    <div class="post-bottom overflow">
+                                        They take Chihiro to Prince Edward Island, Canada, for two and a half weeks with Cola's parents, their friend Casey, and her dog Coco.
                                     </div>
                                 </div>
                             </div>
@@ -245,23 +247,13 @@
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        They take Chihiro to Prince Edward Island, Canada, for two and a half weeks with Cola's parents, their friend Casey, and her dog Coco. Chihiro has so much fun, she sleeps for an entire week upon returning to Brooklyn!
+                                        So many friends but such busy schedules! Once a month, Cola and Ben host a homemade Pizza Night at their apartment to keep in touch with friends.
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <div class="post-bottom overflow">
-                                        Once a month, they host a homemade Pizza Night at their apartment to keep in touch with friends, even though they all have busy schedules now.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-6 padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
