--- a/inside.html
+++ b/inside.html
@@ -46,6 +46,12 @@
     </section>
     <!--/#private-->
 
+    <div class="container rsvp">
+        <script type="text/javascript" src="http://app.rsvpify.com/embed/500065827"></script>
+        <script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
+        <script type="text/javascript">iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
+    </div>
+
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lightbox.min.js"></script>
