updated faq copy, updated party photos

--- a/password-protected.html
+++ b/password-protected.html
@@ -70,7 +70,8 @@
                         <p>Cocktails will be served at 6:00pm</p>
                         <p>Dinner at 7:00pm</p>
                         <p>Party ‘till 10:30pm</p>
-                        <p>101 East Dr, Brooklyn, NY 11225</p>
+                        <p><a href = "https://www.google.com/maps/place/Prospect+Park+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
+                        <p>Parking available nearby</p>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding-bottom wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -90,8 +91,8 @@
                         </div>
                         <h2>Rehearsal Dinner at Berg’n</h2>
                         <p>Please join us for dinner at 6:00pm on September 22nd at  Berg’n</p>
+                        <p>Have a beer and get to know our closest friends, we think you’ll all get along fabulously. Dinner will be served casual cocktail style so you can  get to know to everyone.</p>
                         <p><a href="https://www.google.com/maps/place/Berg'n/@40.6772614,-73.9593843,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9f2d36229d:0xcf3837638bf68bc2!8m2!3d40.6772614!4d-73.9571956">899 Bergen St, Brooklyn, NY 11238</a></p>
-                        <p>What to expect: grab a beer and get to know our closest friends, we think you’ll all get along fabulously. Dinner will be served casual cocktail style so you can  get to know to everyone.</p>
                     </div>
                 </div>
             </div>
@@ -103,7 +104,7 @@
                             <img src="images/luggage.png" alt="">
                         </div>
                         <h2>Where Should I Stay?</h2>
-                        <p>We’ve held blocks of rooms for a discounted rate at three hotels. The Farfield and Nu Hotels include breakfast and discounted parking is available. These rooms will be available to reserve until July 21, 2018 - or until they are all booked, so reserve now: just mention that you are part of the Hodges/Solwitz wedding!</p>
+                        <p>We’ve held blocks of rooms for a discounted rate at three hotels. The Farfield and Nu Hotels include breakfast and parking available nearby. These rooms will be available to reserve until July 21, 2018 - or until they are all booked, so reserve now: just mention that you are part of the Hodges/Solwitz wedding!</p>
                         <p><a href="http://cwp.marriott.com/nycbf/shw">The Fairfield Inn Brooklyn</a></p>
                         <p><a href="https://nuhotelbrooklyn.reztrip.com/ext/promoRate?property=417&mode=b&pm=true&sr=287631&vr=3">The Nu Hotel</a></p>
                         <p><a href="https://aws.passkey.com/go/HodgesWeddingRoomBlock">The Marriott at Brooklyn Bridge</a></p>
@@ -116,9 +117,8 @@
                             <img src="images/gifts.png" alt="">
                         </div>
                         <h2>What About Gifts?</h2>
-                        <p>Most of all we want all of our amazing friends and family in the same room, so, more than anything we consider your presence to be our gift. However, If you would like to give something tangible, we love original art. Please consider contributing to the gift of an <a href="https://www.zola.com/registry/collection-item/5a3d5d86e343564ff799339b">Overstory Tree</a>, for Prospect Park’s restoration in honor of our marriage.</p>
-                        <p>Like matching silverware? So do we:</p>
-                        <p><a href="https://www.zola.com/registry/benandcola">Our Registry is Here</a></p>
+                        <p>Most of all we want to party with our amazing friends and family, so, more than anything we consider your presence to be our gift. However, If you would like to give something tangible our registry is <a href="https://www.zola.com/registry/benandcola">here</a></p>
+                        <p>Please do not bring gifts to the reception, email BenandCola@gmail.com if you need assistance.</p>
                     </div>
                 </div>
 
@@ -128,8 +128,7 @@
                             <img src="images/teddy.png" alt="">
                         </div>
                         <h2>Will You Have Child Care?</h2>
-                        <p>We will be providing childcare at (HOTEL) by (Person) for children under 10 during the ceremony and reception.</p>
-                        <p>(4:00pm - 11:30pm)</p>
+                        <p>We will be providing childcare for children under 10 during the ceremony and reception.</p>
                         <p>Please do bring your children to the rehearsal dinner - Berg’n is very family friendly and we really want to see them!</p>
                     </div>
                 </div>
@@ -393,12 +392,12 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/party-photos/Donna.png" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Chihiro.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
-                                        <h2>Donna Meyer</h2>
-                                        <p>Friend of the Hodges Family, Designer & Creator of The Dress</p>
+                                        <h2>Chihiro</h2>
+                                        <p>Best Dog of Honor</p>
                                     </div>
                                 </div>
                             </div>
