added party photo of Paul

--- a/password-protected.html
+++ b/password-protected.html
@@ -337,7 +337,7 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/aboutus/1.jpg" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Paul.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
