added Casey's illustrations

--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
         <div class="container">
             <div class="row">
                 <div class="timeline-blog overflow">
-                    <div class="overflow padding-bottom full-width-divider">
-                            <div class="col-sm-8">
-                                <img src="images/mountain-splash.png" class="img-responsive center-block">
-                            </div>
-                            <div class="col-sm-4">
-                                <h1>December 2014 </h1>
-                                <p>Fate and a lot of snow first brought Ben and Cola together. Assigned to the same cabin for a snowboarding meetup, these strangers discovered that they were Brooklyn neighbors.</p>
-                            </div>
+                    <div class="overflow full-width-divider">
+                        <img src="images/Cabin_All_Layers.png" class="img-responsive center-block">
+                        <div>
+                            <h2>December 2014 </h2>
+                            <p>Fate and a lot of snow first brought Ben and Cola together. Assigned to the same cabin for a snowboarding meetup, these strangers discovered that they were Brooklyn neighbors.</p>
+                        </div>
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
@@ -150,12 +148,10 @@
                     </div>
                 </div>
                 <div class="timeline-blog overflow">
-                    <div class="overflow padding-bottom full-width-divider">
-                        <div class="col-sm-8">
-                            <img src="images/chihiro-field.png" class="img-responsive center-block">
-                        </div>
-                        <div class="col-sm-4">
-                            <h1>December 2016 </h1>
+                    <div class="overflow full-width-divider">
+                        <img src="images/Chihiro_AllLayers.png" class="img-responsive center-block">
+                        <div>
+                            <h2>December 2016 </h2>
                             <p>A friend they had dog-sat for called saying they just couldn’t take care of their puppy anymore. Ben & Cola already loved this puppy and happily added Chihiro to their adventuring family.</p>
                         </div>
                     </div>
@@ -264,12 +260,10 @@
                         </div>
                     </div>
 
-                    <div class="overflow padding-bottom full-width-divider">
-                        <div class="col-sm-8">
-                            <img src="images/boathouse.png" class="img-responsive center-block">
-                        </div>
-                        <div class="col-sm-4">
-                            <h1>Now</h1>
+                    <div class="overflow full-width-divider">
+                        <img src="images/Boathouse_AllLayers.png" class="img-responsive center-block">
+                        <div>
+                            <h2>Now</h2>
                             <p>Whether it's a 15 hour flight to Japan, or a 15 minute walk to Prospect Park, Ben and Cola love to share amazing adventures. Now they’re excited to start their next adventure together, and they hope you can join them as they embark on their next journey.</p>
                         </div>
                     </div>
